# vfgen

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  autostuff_purge.sh  configure.ac  version.txt
.github/workflows/: tests.yml
cmake_build/: cmclean
dev-notes/: cross-compile-on-linux-for-windows.md  file-format.md
src/: CMakeLists.txt  Makefile.am  Makefile.vfgen  MyVec.cpp  MyVec.h  codegen_utils.cpp  codegen_utils.h  ginac_aux_functions.cpp  ginac_aux_functions.h  ginac_declare_funcs.h  strutils.cpp  strutils.h  vf.cpp  vf.h  vf_adolc.cpp  vf_auto.cpp  vf_boostodeint.cpp  vf_cvode.cpp  vf_cvode7.cpp  vf_dde23.cpp  vf_dde_solver.cpp  vf_ddebiftool.cpp  vf_delay2ode.cpp  vf_differentials.cpp  vf_dstool.cpp  vf_evf.cpp  vf_gsl.cpp  vf_help_text.cpp  vf_help_text.h  vf_javamath.cpp  vf_javascript.cpp  vf_julia.cpp  vf_latex.cpp  vf_lsoda.cpp  vf_matcont.cpp  vf_matlab.cpp  vf_octave.cpp  vf_pddecont.cpp  vf_pydstool.cpp  vf_pygsl.cpp  (+9 more)
src/.deps/: vfgen-MyVec.Po  vfgen-codegen_utils.Po  vfgen-ginac_aux_functions.Po  vfgen-strutils.Po  vfgen-vf.Po  vfgen-vf_adolc.Po  vfgen-vf_auto.Po  vfgen-vf_cvode.Po  vfgen-vf_dde23.Po  vfgen-vf_dde_solver.Po  vfgen-vf_ddebiftool.Po  vfgen-vf_delay2ode.Po  vfgen-vf_differentials.Po  vfgen-vf_dstool.Po  vfgen-vf_evf.Po  vfgen-vf_gsl.Po  vfgen-vf_javascript.Po  vfgen-vf_latex.Po  vfgen-vf_lsoda.Po  vfgen-vf_matcont.Po  vfgen-vf_matlab.Po  vfgen-vf_octave.Po  vfgen-vf_pddecont.Po  vfgen-vf_pydstool.Po  vfgen-vf_pygsl.Po  vfgen-vf_radau5.Po  vfgen-vf_scilab.Po  vfgen-vf_scipy.Po  vfgen-vf_taylor.Po  vfgen-vf_xml.Po  vfgen-vf_xpp.Po  vfgen-vfgen.Po
tests/: run_ci_tests.sh
tests/test_adolc/: install_adolc.sh  run_test.sh  test_linearoscp.cpp
tests/test_boostodeint/: run_test_boostodeint_default_noparams.sh  run_test_boostodeint_default_params.sh  run_test_boostodeint_implicit_noparams.sh  run_test_boostodeint_implicit_params.sh  test_boostodeint_default_noparams.cpp  test_boostodeint_default_params.cpp  test_boostodeint_implicit_noparams.cpp  test_boostodeint_implicit_params.cpp
tests/test_cvode7/: CMakeLists.txt  install_cvode7.sh  run_test.sh  test_linearosc_cv7.c
tests/test_cvode7/test1/: CMakeLists.txt  test_linearosc_cv7.c
tests/test_cvode7/test2/: CMakeLists.txt  test_linearoscp_cv7.c
tests/test_dde_solver/: run_test.sh  test_dde_solver.f90
tests/test_evf/: run_test.sh  test_evf.c
tests/test_gsl/: install_gsl.sh  run_test.sh  test_gsl.c  test_linearosc.c  test_linearoscp.c
tests/test_julia/: install_julia.sh  run_test.sh  test_linearosc.jl  test_linearoscp.jl  test_sdd.jl
tests/test_lsoda/: download_lsoda.sh  run_test.sh  run_test_linearosc.sh  run_test_pidecay.sh  test_lsoda.f  test_lsoda_linearosc.f  test_lsoda_pidecay.f
tests/test_matlab/: install_octave.sh  run_test.sh  test_matlab_with_octave.m
tests/test_octave/: linearosc.m  run_test.sh  test_octave.m
tests/test_pygsl/: run_test.sh  test_pygsl.py
tests/test_r/: run_test.sh  test_r.R  test_r_dede.R  test_r_ode.R
tests/test_radau5/: run_test.sh  test_linearosc.f
tests/test_scilab/: install_scilab.sh  run_test.sh  test_scilab.sce
tests/test_scipy/: install_scipy.sh  run_test.sh  test_scipy.py  test_scipy_tfirst.py
tests/test_taylor/: one_over_x.vf  run_test.sh  test_taylor.c
tests/vf/: delayed_logistic.vf  linearosc.vf  linearoscp.vf  pidecay.vf  rossler.vf  sdd.vf
